[gd_scene load_steps=15 format=2]

[ext_resource path="res://scene/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://img/lizardspritesheet.png" type="Texture" id=2]
[ext_resource path="res://script/lizard.gd" type="Script" id=3]
[ext_resource path="res://img/lizarddeathspritesheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 2.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Death",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 17.0909
height = 0.867134

[node name="Lizard" instance=ExtResource( 1 )]
script = ExtResource( 3 )
hp = 3
damage = 2
speed = 30.0

[node name="AnimatedSprite" parent="." index="0"]
rotation = 1.5708
frames = SubResource( 9 )
animation = "Death"
frame = 3
playing = true

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 10 )

[node name="SpikeTimer" type="Timer" parent="." index="4"]
wait_time = 3.0

[node name="DespawnTimer" type="Timer" parent="." index="5"]
wait_time = 10.0

[node name="CollisionTimer" type="Timer" parent="." index="6"]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="SpikeTimer" to="." method="_on_SpikeTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
